--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-	"export": "next export"
+    "export": "next export"
   },
   "dependencies": {
     "autoprefixer": "^10.4.14",
@@ -14,10 +14,10 @@
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.11.0",
     "lucide-react": "^0.510.0",
-    "next": "15.3.1",
+    "next": "^15.5.7",
     "postcss": "^8.4.21",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "swiper": "^11.2.6",
